# fetcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
fetchadmin/: Cargo.toml  fetchadmin.toml
fetchadmin/src/: lib.rs
fetchcli/: Cargo.toml
fetchcli/src/: main.rs
fetchui/: Cargo.toml
src/: main.rs
