[package]
name = "fetchcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { "version" = "1.23.0", features = ["full"] }
fetchadmin = { path = "../fetchadmin" }
